# iot_project

./: README.md
backend/: pyproject.toml
backend/backend/: database.py  main.py  models.py  utils.py
backend/backend/routes/: auth.py  device_control.py  humidity.py  real_time_stats.py  temperature.py  user.py
frontend/: pubspec.yaml
frontend/assets/data/: amharic.md  english.md  ormoifa.md
frontend/lib/: main.dart
frontend/lib/api/: iot_service.dart
frontend/lib/screens/: awerness_screen.dart  dashboard_screen.dart  device_screen.dart  info_detail_screen.dart  login_screen.dart  register_screen.dart  screens.dart  settings_screen.dart
frontend/lib/widgets/: custom_bottom_nav.dart  infographics_card.dart  widgets.dart
frontend/test/: widget_test.dart
